--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "prettier": "^2.6.2",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-resizable": "^3.0.4",
     "react-scripts": "5.0.1",
     "typescript": "^4.7.3",
     "web-vitals": "^2.1.4",
@@ -59,6 +60,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-resizable": "^3.0.1",
     "monaco-editor": "^0.33.0"
   }
 }
